# veria-python

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
src/veria/: __init__.py  client.py
